--- a/taotao-manager-mapper/pom.xml
+++ b/taotao-manager-mapper/pom.xml
@@ -4,6 +4,7 @@
         <artifactId>taotao-manager</artifactId>
         <groupId>com.sr</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../taotao-manager</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
