--- a/taotao-manager-web/pom.xml
+++ b/taotao-manager-web/pom.xml
@@ -4,6 +4,7 @@
         <artifactId>taotao-manager</artifactId>
         <groupId>com.sr</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../taotao-manager</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>taotao-manager-web</artifactId>
@@ -14,7 +15,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
