--- a/taotao-manager/pom.xml
+++ b/taotao-manager/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>taotao-manager</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>taotao-manager</name>
@@ -102,12 +103,16 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
-                    <port>8080</port>
-                    <path>/taotao</path>
-                    <uriEncoding>UTF-8</uriEncoding>
+                    <url>http://localhost:8080/manager/text</url>
+                    <username>admin</username>
+                    <password>admin</password>
+                    <!--<port>8080</port>-->
+                    <!--<path>/taotao</path>-->
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
 </project>
