--- a/taotao-manager-mapper/pom.xml
+++ b/taotao-manager-mapper/pom.xml
@@ -7,7 +7,6 @@
         <relativePath>../taotao-manager</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>taotao-manager-mapper</artifactId>
     <packaging>jar</packaging>
 
@@ -19,11 +18,31 @@
     </properties>
 
     <dependencies>
+        <!-- 接口中需要mybatis的注解 -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
+        <!-- 通用mapper -->
+        <dependency>
+            <groupId>com.github.abel533</groupId>
+            <artifactId>mapper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sr</groupId>
+            <artifactId>taotao-manager-pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
