--- a/taotao-manager-pojo/pom.xml
+++ b/taotao-manager-pojo/pom.xml
@@ -12,20 +12,11 @@
     <packaging>jar</packaging>
 
     <name>taotao-manager-pojo</name>
-    <url>http://maven.apache.org</url>
-
     <dependencies>
-
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+        </dependency>
     </dependencies>
 
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-        </resources>
-    </build>
 </project>
